--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,29 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+/* header section */
+nav a {
+	padding: 1%;
+}
+
+/* skills section */
+ul {
+	display: inline-block;
+	list-style: none;
+	width: 40%;
+	padding: 0%;
+
+}
+
+li {
+	padding: 2% 0%;
+}
+
+/* contacts */
+.ContactSection div {
+	display: inline-block;
+	padding: 1%;
+}
+
+
